Odd alignment fix for like

--- a/voteit/core/css/main.css
+++ b/voteit/core/css/main.css
@@ -732,7 +732,6 @@ table.listing {
     margin: 0px 5px 5px 0px;
 }
 .meta {
-    clear: both;
     color: #666;
     font-size: 12px;
     margin: 10px 0 5px 0;
